# fblthp-archive

./: .gitignore  CMakeLists.txt  Makefile  README.md  Readme.md  card.go  csv-importer.py  docker-compose.yaml  go.mod  init.sql  main.go  template.env
db/: card.go  migration-manager.go  migration.go  queries.go  utils.go
db/migrations/M-20241029-card-colors/: down.sql  up.sql
db/migrations/M-20241104-NewMigration/: down.sql
errors/: card.go  storage.go
exceptions/: card.go  generic.go  storage.go
migration-manager/: migration.go  migration_manager.go  migration_manager_test.go
migrations/: 20241126_colors.sql  20241201_raw_cards.sql  20250101_raw_collection.sql  20250104_scryfall_history.sql  20250105_mtg_set.sql
model/: card.go
queries/: migrations.go
src/: env.h  exceptions.h
src/fblthp/: main.cpp  main.py  scryfall.py
src/importer/: main.py  models.py  scryfall.py
src/migration-manager/: exceptions.h  main.cpp  migrations.cpp  migrations.h
storage/: memory-storage.go  storage.go
testdata/: migrations.sql
utils/: counter.go  files.go  scryfall.go
